--- a/java/pom.xml
+++ b/java/pom.xml
@@ -23,6 +23,19 @@
     <build>
         <plugins>
             <plugin>
+                <groupId>org.pitest</groupId>
+                <artifactId>pitest-maven</artifactId>
+                <version>1.4.7</version>
+                <configuration>
+                    <targetClasses>
+                        <param>com.adaptionsoft.games.trivia.uglytrivia*</param>
+                    </targetClasses>
+                    <targetTests>
+                        <param>com.adaptionsoft.games*</param>
+                    </targetTests>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-resources-plugin</artifactId>
                 <version>2.5</version>
